imlpemented menu bar and game properties pane...

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -5,3 +5,24 @@ controlPanel=Control Panel
 key=Key
 value=Value
 clean=Clean
+keyMustBeUnique=Key must be unique
+warn=Warn
+type=Type
+save=Save
+
+############ Menu bar
+file=File
+systemParameters=SystemParameters
+language=Language
+help=Help
+new=New
+close=Close
+show=Show
+geo=Geo
+eng=Eng
+
+############ Game properties
+website=Website
+start=Start
+point=Point
+name=Name
