--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -5,3 +5,24 @@ controlPanel=მართვის ცენტრი
 key=გასაღები
 value=მნიშვნელობა
 clean=გასუფთავება
+keyMustBeUnique=გასაღები უნდა იყოს უნიკალური
+warn=საფრთხე
+type=ტიპი
+save=დამახსოვრება
+
+############ Menu bar
+file=ფაილი
+systemParameters=სისტემური პარამეტრები
+language=ენა
+help=დახმარება
+new=ახალი
+close=დახურვა
+show=ნახვა
+geo=ქართ
+eng=ინგ
+
+############ Game properties
+website=საიტი
+start=დაწყება
+point=ქულა
+name=სახელი
