added some futures... fixes...

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -15,11 +15,17 @@ file=File
 systemParameters=SystemParameters
 language=Language
 help=Help
+shortcut=Shortcut
 new=New
 close=Close
 show=Show
 geo=Geo
 eng=Eng
+ctrl_x_y=select tile(x,y)
+ctrl_backspace=rejected selected tile
+ctrl_arrow=choose direction for tile
+ctrl_+=add tile
+ctrl_Z=undo
 
 ############ Game properties
 website=Website
