--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -15,11 +15,17 @@ file=ფაილი
 systemParameters=სისტემური პარამეტრები
 language=ენა
 help=დახმარება
+shortcut=Shortcut
 new=ახალი
 close=დახურვა
 show=ნახვა
 geo=ქართ
 eng=ინგ
+ctrl_x_y=ქვის(x,y) არჩევა
+ctrl_backspace=არჩეული ქვის გაუქმება
+ctrl_arrow=ჩამოსასვლელი ქვის მიმართულების არჩევა
+ctrl_+=ქვის დამატება
+ctrl_Z=უკან დაბრუნება
 
 ############ Game properties
 website=საიტი
