last fixed before first release...

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -38,3 +38,7 @@ incorrectTurn=Incorrect turn
 opponent=Opponent
 bazaar=Bazaar
 me=მე
+
+############ add left count
+add=Add
+addLeftCount=Add left count
