--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -38,3 +38,7 @@ incorrectTurn=არასწორი სვლა
 opponent=მოწინააღმდეგე
 bazaar=ბაზარი
 me=მე
+
+############ add left count
+add=დამატება
+addLeftCount=დარჩენილიქ ვების დამატება
