finished him an my main method implementation...

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -38,6 +38,7 @@ incorrectTurn=Incorrect turn
 opponent=Opponent
 bazaar=Bazaar
 me=მე
+somethingWrongInHimProbabilities=Something wrong in him probabilities
 
 ############ add left count
 add=Add
