--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -38,6 +38,7 @@ incorrectTurn=არასწორი სვლა
 opponent=მოწინააღმდეგე
 bazaar=ბაზარი
 me=მე
+somethingWrongInHimProbabilities=შეცდომა მისი ალბათობების დათვლისას
 
 ############ add left count
 add=დამატება
