working on heuristic and game finished function...

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -43,3 +43,9 @@ somethingWrongInHimProbabilities=Something wrong in him probabilities
 ############ add left count
 add=Add
 addLeftCount=Add left count
+
+############ new game
+newGame=Next game
+startNewHand=Do you want to start new hand with this properties?
+no=no
+yes=yes
