--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -43,3 +43,7 @@ somethingWrongInHimProbabilities=შეცდომა მისი ალბა
 ############ add left count
 add=დამატება
 addLeftCount=დარჩენილიქ ვების დამატება
+newGame=ახალი თამაში
+startNewHand=გსურთ ახალი ხელის დაწყება იგივე პარამეტებით?
+no=არა
+yes=კი
