some heuristic refactors...

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -37,8 +37,9 @@ name=Name
 incorrectTurn=Incorrect turn
 opponent=Opponent
 bazaar=Bazaar
-me=მე
-somethingWrongInHimProbabilities=Something wrong in him probabilities
+me=Me
+HimTileProbabilityIsMoreThanOne=Him tile probability is more than one
+probabilitiesSumIsNoEqualToHimTilesCount=Him probabilities sum is not equal to him tiles count
 
 ############ add left count
 add=Add
