--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -38,7 +38,8 @@ incorrectTurn=არასწორი სვლა
 opponent=მოწინააღმდეგე
 bazaar=ბაზარი
 me=მე
-somethingWrongInHimProbabilities=შეცდომა მისი ალბათობების დათვლისას
+HimTileProbabilityIsMoreThanOne=მისი ალბათობა არის ერთზე მეტი
+probabilitiesSumIsNoEqualToHimTilesCount=მისი ალბათობების ჯამი არ არის მისი ქვების რაოდენობის ტოლი
 
 ############ add left count
 add=დამატება
