some clean ups... testing and fixing probabilities...

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -39,6 +39,7 @@ opponent=Opponent
 bazaar=Bazaar
 me=Me
 HimTileProbabilityIsMoreThanOne=Him tile probability is more than one
+HimTileProbabilityIsLessThanZero=Him tile probability is less than zero
 probabilitiesSumIsNoEqualToHimTilesCount=Him probabilities sum is not equal to him tiles count
 
 ############ add left count
@@ -50,3 +51,8 @@ newGame=Next game
 startNewHand=Do you want to start new hand with this properties?
 no=no
 yes=yes
+
+############ game starter
+gameStarter=Game starter
+whoStartGame=Who start the game?
+he=he
