--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -39,6 +39,7 @@ opponent=მოწინააღმდეგე
 bazaar=ბაზარი
 me=მე
 HimTileProbabilityIsMoreThanOne=მისი ალბათობა არის ერთზე მეტი
+HimTileProbabilityIsLessThanZero=მისი ალბათობა არის ნოლზე ნაკლები
 probabilitiesSumIsNoEqualToHimTilesCount=მისი ალბათობების ჯამი არ არის მისი ქვების რაოდენობის ტოლი
 
 ############ add left count
@@ -48,3 +49,8 @@ newGame=ახალი თამაში
 startNewHand=გსურთ ახალი ხელის დაწყება იგივე პარამეტებით?
 no=არა
 yes=კი
+
+############ game starter
+gameStarter=თამაშის დამწყები
+whoStartGame=ვინ იწყებს თამაშს?
+he=ის
