added played game page...

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -1,5 +1,6 @@
 ############ Control Panel Header
 controlPanel=Control Panel
+Domino=Domino
 
 ############ System Parameters
 key=Key
@@ -32,6 +33,7 @@ website=Website
 start=Start
 point=Point
 name=Name
+pleaseFillAllField=Please fill all field
 
 ############ Domino
 incorrectTurn=Incorrect turn
@@ -56,3 +58,22 @@ yes=yes
 gameStarter=Game starter
 whoStartGame=Who start the game?
 he=he
+
+############ Played game
+playedGame=Played game
+version=Version
+result=Result
+date=Date
+myPoint=My point
+himPoint=Him point
+pointForWin=Point for win
+opponentName=Opponent name
+WIN_ME=Win me
+WIN_HIM=Win him
+STOPPED=Stopped
+NOT_FINISHED=Not finished
+
+########### Save game
+saveGame=Save game
+doYouWantToSaveGame=DO you want to save game?
+cancel=Cancel
