--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -1,5 +1,6 @@
 ############ Control Panel Header
 controlPanel=მართვის ცენტრი
+Domino=დომინო
 
 ############ System Parameters
 key=გასაღები
@@ -32,6 +33,7 @@ website=საიტი
 start=დაწყება
 point=ქულა
 name=სახელი
+pleaseFillAllField=გთხოვთ შეავსოთ ყველა ველი
 
 ############ Domino
 incorrectTurn=არასწორი სვლა
@@ -54,3 +56,22 @@ yes=კი
 gameStarter=თამაშის დამწყები
 whoStartGame=ვინ იწყებს თამაშს?
 he=ის
+
+############ Played game
+playedGame=ნათამაშები თამაში
+version=ვერსია
+result=შედეგი
+date=თარიღი
+myPoint=ჩემი ქულა
+himPoint=მისი ქულა
+pointForWin=მოგების ქულა
+opponentName=მოწინ. სახელი
+WIN_ME=მოვიგე
+WIN_HIM=წავაგე
+STOPPED=შეჩერდა
+NOT_FINISHED=მიმდინარეობს
+
+########### Save game
+saveGame=თამაშის შენახვა
+doYouWantToSaveGame=გსურთ თუ არა თამაშის შენახვა
+cancel=დახურვა
