implemented grouped game pane...'

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -77,3 +77,14 @@ NOT_FINISHED=Not finished
 saveGame=Save game
 doYouWantToSaveGame=DO you want to save game?
 cancel=Cancel
+
+########### Grouped played game
+groupedPlayedGame=Grouped played game
+winPercent=Win
+losePercent=Lose
+stoppedPercent=Stopped
+winPercentForFinished=Win part
+groupByVersion=Group by version
+groupByOpponentName=Group by opponent name
+groupByWebsite=Group by website
+groupByPointForWin=Group by point for win
