--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -75,3 +75,14 @@ NOT_FINISHED=მიმდინარეობს
 saveGame=თამაშის შენახვა
 doYouWantToSaveGame=გსურთ თუ არა თამაშის შენახვა
 cancel=დახურვა
+
+########### Grouped played game
+groupedPlayedGame=დაჯგუფებული ნათამაშები თამაში
+winPercent=მოგება
+losePercent=წაგება
+stoppedPercent=შეჩერებული
+winPercentForFinished=მოგების წილი
+groupByVersion=დაჯგუფება ვერსიით
+groupByOpponentName=დაჯგუფება სახელით
+groupByWebsite=დაჯგუფება საიტით
+groupByPointForWin=დაჯგუფება მოგების ქულით
