remove CachedGame.getGame method

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -43,6 +43,8 @@ me=Me
 opponentTileProbabilityIsMoreThanOne=Opponent tile probability is more than one
 opponentTileProbabilityIsLessThanZero=Opponent tile probability is less than zero
 probabilitiesSumIsNoEqualToOpponentTilesCount=Opponent probabilities sum is not equal to opponent tiles count
+roundsIsEmpty=Rounds is empty
+movesHistoryIsEmpty=Moves history is empty
 
 ############ add left count
 add=Add
