--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -43,6 +43,8 @@ me=მე
 opponentTileProbabilityIsMoreThanOne=მისი ალბათობა არის ერთზე მეტი
 opponentTileProbabilityIsLessThanZero=მისი ალბათობა არის ნოლზე ნაკლები
 probabilitiesSumIsNoEqualToOpponentTilesCount=მისი ალბათობების ჯამი არ არის მისი ქვების რაოდენობის ტოლი
+roundsIsEmpty=ძველი რაუნდები ცარიელია
+movesHistoryIsEmpty=სვლების ისტორია ცარიელია
 
 ############ add left count
 add=დამატება
