--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -70,10 +70,11 @@ myPoint=My point
 opponentPoint=Opponent point
 pointForWin=Point for win
 opponentName=Opponent name
-WIN_ME=Win me
-WIN_OPPONENT=Win opponent
+I_WIN=Win me
+OPPONENT_WIN=Win opponent
 STOPPED=Stopped
-NOT_FINISHED=Not finished
+RUNS=Not finished
+date=Date
 
 ########### Save game
 saveGame=Save game
