--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -68,10 +68,11 @@ myPoint=ჩემი ქულა
 opponentPoint=მისი ქულა
 pointForWin=მოგების ქულა
 opponentName=მოწინ. სახელი
-WIN_ME=მოვიგე
-WIN_OPPONENT=წავაგე
+I_WIN=მოვიგე
+OPPONENT_WIN=წავაგე
 STOPPED=შეჩერდა
-NOT_FINISHED=მიმდინარეობს
+RUNS=მიმდინარეობს
+date=თარიღი
 
 ########### Save game
 saveGame=თამაშის შენახვა
