added opponent plays dao

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -80,6 +80,8 @@ date=Date
 saveGame=Save game
 doYouWantToSaveGame=DO you want to save game?
 cancel=Cancel
+saveGame2=Save game
+saveOpponentPlays=Save opponent plays
 
 ########### Grouped game game
 groupedPlayedGame=Grouped played game
