--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -78,6 +78,8 @@ date=თარიღი
 saveGame=თამაშის შენახვა
 doYouWantToSaveGame=გსურთ თუ არა თამაშის შენახვა
 cancel=დახურვა
+saveGame2=თამაშის დამახსოვრება
+saveOpponentPlays=მოწინააღმდეგის სვლების დამახსოვრება
 
 ########### Grouped game game
 groupedPlayedGame=დაჯგუფებული ნათამაშები თამაში
