fixes opponent plays function

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -93,3 +93,10 @@ groupByVersion=Group by version
 groupByOpponentName=Group by opponent name
 groupByWebsite=Group by website
 groupByPointForWin=Group by point for win
+
+########### Grouped opponent plays
+groupedOpponentPlays=Grouped opponent plays
+groupByGameId=Grouped by game
+gameId=Game id
+BalancedGuessRateCounter=Balanced guess rate
+SimpleGuessRateCounter=Simple guess rate
