--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -91,3 +91,10 @@ groupByVersion=დაჯგუფება ვერსიით
 groupByOpponentName=დაჯგუფება სახელით
 groupByWebsite=დაჯგუფება საიტით
 groupByPointForWin=დაჯგუფება მოგების ქულით
+
+########### Grouped opponent plays
+groupedOpponentPlays=დაჯგუფებული მოწინააღმდეგის სვლები
+groupByGameId=დაჯგუფება თამაშით
+gameId=თამაშის
+BalancedGuessRateCounter=ბალანსირებული გამოცნობის კოეფ.
+SimpleGuessRateCounter=მარტივი გამოცნობის კოეფ.
