--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -100,3 +100,7 @@ groupByGameId=Grouped by game
 gameId=Game id
 BalancedGuessRateCounter=Balanced guess rate
 SimpleGuessRateCounter=Simple guess rate
+
+cantChangeNodeRound=Can't find node round for change in MinMax cache
+cantFindPlayedHeuristic=Can't find played heuristic for predictor
+unexpectedErrorOccurred=Occurred unexpected error
