--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -98,3 +98,7 @@ groupByGameId=დაჯგუფება თამაშით
 gameId=თამაშის id
 BalancedGuessRateCounter=ბალანსირებული გამოცნობის კოეფ.
 SimpleGuessRateCounter=მარტივი გამოცნობის კოეფ.
+
+cantChangeNodeRound=MinMax-ს ქეშისთვის ბოლოს ნათამაშები თამაშის შეცვლა ვერ მოხერხდა
+cantFindPlayedHeuristic=მოწინააღმდეგის ქვის გამომცნობისთვის ბოლოს ნათამაშები თამაში ქვის ევრისტიკის მოძებნა ვერ მოხერხდა
+unexpectedErrorOccurred=დაფიქსირდა გაუთვალისწინებელი შეცდომა
