implemented skip round future

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -22,11 +22,12 @@ close=Close
 show=Show
 geo=Geo
 eng=Eng
-ctrl_x_y=select tile(left,right)
-ctrl_backspace=rejected selected tile
-ctrl_arrow=choose direction for tile
-ctrl_+=add tile
-ctrl_Z=undo
+ctrl_x_y=Select tile(left,right)
+ctrl_backspace=Rejected selected tile
+ctrl_arrow=Choose direction for tile
+ctrl_+=Add tile
+ctrl_Z=Undo
+ctrl_B=Skip round
 
 ############ Game properties
 website=Website
@@ -104,3 +105,8 @@ SimpleGuessRateCounter=Simple guess rate
 cantChangeNodeRound=Can't find node round for change in MinMax cache
 cantFindPlayedHeuristic=Can't find played heuristic for predictor
 unexpectedErrorOccurred=Occurred unexpected error
+
+skipRound=Skip round
+leftTilesCount=Left tiles count
+startMe=Start me
+skip=Skip
