--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -110,3 +110,8 @@ skipRound=Skip round
 leftTilesCount=Left tiles count
 startMe=Start me
 skip=Skip
+detectTiles=Detect tiles
+executeTilesDetector=Do you want to execute tiles detector?
+cantDetectTiles=Can't detect tiles
+yesAndStartMe=Yes, start me
+yesAndStartHe=Yes, start he
