--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -108,3 +108,8 @@ skipRound=რაუნდის გამოტოვება
 leftTilesCount=დარჩენილი ქვები
 startMe=ვიწყებ მე
 skip=გამოტოვება
+detectTiles=ქვების ამოცნობა
+executeTilesDetector=გსურთ ქვების ამოცნობის გაშვება?
+cantDetectTiles=ქვების ამოცნობა შეუძლებელია
+yesAndStartMe=კი, ვიწყებ მე
+yesAndStartHe=კი, იწყებს ის
