implement detect added tiles function

--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -113,3 +113,5 @@ executeTilesDetector=გსურთ ქვების ამოცნობი
 cantDetectTiles=ქვების ამოცნობა შეუძლებელია
 yesAndStartMe=კი, ვიწყებ მე
 yesAndStartHe=კი, იწყებს ის
+detectAddedTiles=დამატებული ქვების ამოცნობა
+executeAddedTilesDetector=გსურთ დამატებული ქვების ამოცნობის გაშვება?
