--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -115,3 +115,5 @@ executeTilesDetector=Do you want to execute tiles detector?
 cantDetectTiles=Can't detect tiles
 yesAndStartMe=Yes, start me
 yesAndStartHe=Yes, start he
+detectAddedTiles=Detect added tiles
+executeAddedTilesDetector=Do you want to execute added tiles detector?
