execute minmax in new thread when there is only one possible move

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -117,3 +117,4 @@ yesAndStartMe=Yes, start me
 yesAndStartHe=Yes, start he
 detectAddedTiles=Detect added tiles
 executeAddedTilesDetector=Do you want to execute added tiles detector?
+minMaxIsInProgress=Min max is in progress
