--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -115,3 +115,4 @@ yesAndStartMe=კი, ვიწყებ მე
 yesAndStartHe=კი, იწყებს ის
 detectAddedTiles=დამატებული ქვების ამოცნობა
 executeAddedTilesDetector=გსურთ დამატებული ქვების ამოცნობის გაშვება?
+minMaxIsInProgress=მიმდინარეობს MinMax
