added finish game while skip round

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -118,3 +118,4 @@ yesAndStartHe=Yes, start he
 detectAddedTiles=Detect added tiles
 executeAddedTilesDetector=Do you want to execute added tiles detector?
 minMaxIsInProgress=Min max is in progress
+finishGame=Finish game
