--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -116,3 +116,4 @@ yesAndStartHe=კი, იწყებს ის
 detectAddedTiles=დამატებული ქვების ამოცნობა
 executeAddedTilesDetector=გსურთ დამატებული ქვების ამოცნობის გაშვება?
 minMaxIsInProgress=მიმდინარეობს MinMax
+finishGame=თამაშის დასრულება
