added name change function

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -28,6 +28,7 @@ ctrl_arrow=Choose direction for tile
 ctrl_+=Add tile
 ctrl_Z=Undo
 ctrl_B=Skip round
+ctrl_N=Edit name
 
 ############ Game properties
 website=Website
@@ -119,3 +120,5 @@ detectAddedTiles=Detect added tiles
 executeAddedTilesDetector=Do you want to execute added tiles detector?
 minMaxIsInProgress=Min max is in progress
 finishGame=Finish game
+editName=Edit name
+pleaseSpecifyNewName=Please specify new name
