implemented p2p ui support

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -29,6 +29,12 @@ ctrl_+=Add tile
 ctrl_Z=Undo
 ctrl_B=Skip round
 ctrl_N=Edit name
+p2p=P2P
+p2pServer=P2P server
+p2pClient=P2P client
+stop=Stop
+selectPointOfWin=Please choose game win point
+specifyGameAmount=Please specify game amount
 
 ############ Game properties
 website=Website
