--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -29,6 +29,12 @@ ctrl_+=ქვის დამატება
 ctrl_Z=უკან დაბრუნება
 ctrl_B=რაუნდის გამოტოვება
 ctrl_N=სახელის რედაქტირება
+p2p=P2P
+p2pServer=P2P სერვერი
+p2pClient=P2P კლიენტი
+stop=გაჩერება
+selectPointOfWin=აირჩიეთ თამაშის მოგების ქულა
+specifyGameAmount=მიუთითეთ თამაშის რაოდენობა
 
 ############ Game properties
 website=საიტი
