fix p2p game dead lock

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -128,3 +128,4 @@ minMaxIsInProgress=Min max is in progress
 finishGame=Finish game
 editName=Edit name
 pleaseSpecifyNewName=Please specify new name
+winner=Winner
