--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -126,3 +126,4 @@ minMaxIsInProgress=მიმდინარეობს MinMax
 finishGame=თამაშის დასრულება
 editName=სახელის რედაქტირება
 pleaseSpecifyNewName=გთხოვთ მიუთითოთ ახალი სახელი
+winner=გამარჯვებული
