added heuristics window

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -29,6 +29,7 @@ ctrl_+=Add tile
 ctrl_Z=Undo
 ctrl_B=Skip round
 ctrl_N=Edit name
+ctrl_H=See heuristic
 p2p=P2P
 p2pServer=P2P server
 p2pClient=P2P client
@@ -129,3 +130,4 @@ finishGame=Finish game
 editName=Edit name
 pleaseSpecifyNewName=Please specify new name
 winner=Winner
+heuristic=Heuristic
