--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -29,6 +29,7 @@ ctrl_+=ქვის დამატება
 ctrl_Z=უკან დაბრუნება
 ctrl_B=რაუნდის გამოტოვება
 ctrl_N=სახელის რედაქტირება
+ctrl_H=ევრისტიკის ნახვა
 p2p=P2P
 p2pServer=P2P სერვერი
 p2pClient=P2P კლიენტი
@@ -127,3 +128,4 @@ finishGame=თამაშის დასრულება
 editName=სახელის რედაქტირება
 pleaseSpecifyNewName=გთხოვთ მიუთითოთ ახალი სახელი
 winner=გამარჯვებული
+heuristic=ევრისტიკა
