working on channels window

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -131,3 +131,7 @@ editName=Edit name
 pleaseSpecifyNewName=Please specify new name
 winner=Winner
 heuristic=Heuristic
+
+########### Channel
+channels=Channels
+duplicateKey=Key must be unique
