--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -129,3 +129,7 @@ editName=სახელის რედაქტირება
 pleaseSpecifyNewName=გთხოვთ მიუთითოთ ახალი სახელი
 winner=გამარჯვებული
 heuristic=ევრისტიკა
+
+######## Channels
+channels=არხები
+duplicateKey=გასაღები უნდა იყოს უნიკალური
