Change website with channel

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -38,7 +38,6 @@ selectPointOfWin=Please choose game win point
 specifyGameAmount=Please specify game amount
 
 ############ Game properties
-website=Website
 start=Start
 point=Point
 name=Name
@@ -100,7 +99,7 @@ stoppedPercent=Stopped
 winPercentForFinished=Win part
 groupByVersion=Group by version
 groupByOpponentName=Group by opponent name
-groupByWebsite=Group by website
+groupByChannel=Group by channel
 groupByPointForWin=Group by point for win
 
 ########### Grouped opponent plays
@@ -135,3 +134,4 @@ heuristic=Heuristic
 ########### Channel
 channels=Channels
 duplicateKey=Key must be unique
+channel=Channel
