Implemented initial extra moves

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -130,6 +130,8 @@ editName=Edit name
 pleaseSpecifyNewName=Please specify new name
 winner=Winner
 heuristic=Heuristic
+action=Action
+executeInitialExtraMoves=Initial extra moves
 
 ########### Channel
 channels=Channels
