--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -128,6 +128,8 @@ editName=სახელის რედაქტირება
 pleaseSpecifyNewName=გთხოვთ მიუთითოთ ახალი სახელი
 winner=გამარჯვებული
 heuristic=ევრისტიკა
+action=ქმედება
+executeInitialExtraMoves=საწყისი დამატებითი სვლები
 
 ######## Channels
 channels=არხები
