working on replay game

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -137,3 +137,9 @@ executeInitialExtraMoves=Initial extra moves
 channels=Channels
 duplicateKey=Key must be unique
 channel=Channel
+
+######## Replay game
+noPlayedGame=Can't find played game
+replayGame=Replay game
+previousMove=Previous move
+nextMove=Next move
