implemented replay games for minmaxpredictor

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -98,6 +98,7 @@ losePercent=Lose
 stoppedPercent=Stopped
 winPercentForFinished=Win part
 groupByVersion=Group by version
+groupInOneResult=Group in one result
 groupByOpponentName=Group by opponent name
 groupByChannel=Group by channel
 groupByPointForWin=Group by point for win
