--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -96,6 +96,7 @@ losePercent=წაგება
 stoppedPercent=შეჩერებული
 winPercentForFinished=მოგების წილი
 groupByVersion=დაჯგუფება ვერსიით
+groupInOneResult=ერთად დაჯგუფება
 groupByOpponentName=დაჯგუფება სახელით
 groupByChannel=დაჯგუფება არხით
 groupByPointForWin=დაჯგუფება მოგების ქულით
