added image detecting second params

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -133,6 +133,7 @@ winner=Winner
 heuristic=Heuristic
 action=Action
 executeInitialExtraMoves=Initial extra moves
+withSecondParams=With second params
 
 ########### Channel
 channels=Channels
