--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -131,6 +131,7 @@ winner=გამარჯვებული
 heuristic=ევრისტიკა
 action=ქმედება
 executeInitialExtraMoves=საწყისი დამატებითი სვლები
+withSecondParams=მეორადი პარამეტრებით
 
 ######## Channels
 channels=არხები
