added new balanced guess rate

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -108,6 +108,7 @@ groupedOpponentPlays=Grouped opponent plays
 groupByGameId=Grouped by game
 gameId=Game id
 BalancedGuessRateCounter=Balanced guess rate
+NegativeBalancedGuessRateCounter=Balanced guess rate(negative)
 SimpleGuessRateCounter=Simple guess rate
 
 cantChangeNodeRound=Can't find node round for change in MinMax cache
