working on processor level multithreading

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -146,3 +146,7 @@ noPlayedGame=Can't find played game
 replayGame=Replay game
 previousMove=Previous move
 nextMove=Next move
+
+######## Multithreading
+startMultithreadingServer=Start multithreading server
+stopMultithreadingServer=Stop multithreading server
