show different minmax result on replay game

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -135,6 +135,8 @@ heuristic=Heuristic
 action=Action
 executeInitialExtraMoves=Initial extra moves
 withSecondParams=With second params
+newBestMove=New best move
+newBestMoveIsSameAsPlayed=New best move is same as played
 
 ########### Channel
 channels=Channels
