--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -133,6 +133,8 @@ heuristic=ევრისტიკა
 action=ქმედება
 executeInitialExtraMoves=საწყისი დამატებითი სვლები
 withSecondParams=მეორადი პარამეტრებით
+newBestMove=ახალი საუკეთესო სვლა
+newBestMoveIsSameAsPlayed=ახალი საუკეთესო სვლა იგივეა რაც ნათამაშები
 
 ######## Channels
 channels=არხები
