added game level

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -42,6 +42,7 @@ start=Start
 point=Point
 name=Name
 pleaseFillAllField=Please fill all field
+level=Level
 
 ############ Domino
 incorrectMove=Incorrect playedMove
@@ -102,6 +103,7 @@ groupInOneResult=Group in one result
 groupByOpponentName=Group by opponent name
 groupByChannel=Group by channel
 groupByPointForWin=Group by point for win
+groupByLevel=Group by level
 
 ########### Grouped opponent plays
 groupedOpponentPlays=Grouped opponent plays
