--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -42,6 +42,7 @@ start=დაწყება
 point=ქულა
 name=სახელი
 pleaseFillAllField=გთხოვთ შეავსოთ ყველა ველი
+level=დონე
 
 ############ Domino
 incorrectMove=არასწორი სვლა
@@ -100,6 +101,7 @@ groupInOneResult=ერთად დაჯგუფება
 groupByOpponentName=დაჯგუფება სახელით
 groupByChannel=დაჯგუფება არხით
 groupByPointForWin=დაჯგუფება მოგების ქულით
+groupByLevel=დაჯგუფება დონით
 
 ########### Grouped opponent plays
 groupedOpponentPlays=დაჯგუფებული მოწინააღმდეგის სვლები
