refactored multithreading as multiprocessed

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -152,5 +152,5 @@ previousMove=Previous move
 nextMove=Next move
 
 ######## Multithreading
-startMultithreadingServer=Start multithreading server
-stopMultithreadingServer=Stop multithreading server
+startMultiProcessorServer=Start multiProcessor server
+stopMultiProcessorServer=Stop multiProcessor server
