--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -150,5 +150,5 @@ previousMove=წინა სვლა
 nextMove=შემდეგი სვლა
 
 ######## Multithreading
-startMultithreadingServer=მრავალნაკადური სერვერის ჩართვა
-stopMultithreadingServer=მრავალნაკადური სერვერის გამორთვა
+startMultiProcessorServer=მრავალპროცესორიანი სერვერის ჩართვა
+stopMultiProcessorServer=მრავალპროცესორიანი სერვერის გამორთვა
