UX major refactor and optimization

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -22,14 +22,14 @@ close=Close
 show=Show
 geo=Geo
 eng=Eng
-ctrl_x_y=Select tile(left,right)
-ctrl_backspace=Rejected selected tile
-ctrl_arrow=Choose direction for tile
-ctrl_+=Add tile
-ctrl_Z=Undo
-ctrl_B=Skip round
-ctrl_N=Edit name
-ctrl_H=See heuristic
+shortcut_x_y=Select tile(left,right)
+shortcut_backspace=Rejected selected tile
+shortcut_arrow=Choose direction for tile
+shortcut_+=Add tile
+shortcut_Z=Undo
+shortcut_B=Skip round
+shortcut_N=Edit name
+shortcut_H=See heuristic
 p2p=P2P
 p2pServer=P2P server
 p2pClient=P2P client
@@ -139,6 +139,7 @@ executeInitialExtraMoves=Initial extra moves
 withSecondParams=With second params
 newBestMove=New best move
 newBestMoveIsSameAsPlayed=New best move is same as played
+working=Working...
 
 ########### Channel
 channels=Channels
