added sysparams overload for clients

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -140,6 +140,7 @@ withSecondParams=With second params
 newBestMove=New best move
 newBestMoveIsSameAsPlayed=New best move is same as played
 working=Working...
+clients=Clients
 
 ########### Channel
 channels=Channels
