--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -138,6 +138,7 @@ withSecondParams=მეორადი პარამეტრებით
 newBestMove=ახალი საუკეთესო სვლა
 newBestMoveIsSameAsPlayed=ახალი საუკეთესო სვლა იგივეა რაც ნათამაშები
 working=მუშავდება...
+clients=კლიენტები
 
 ######## Channels
 channels=არხები
