added version filter for grouped games

--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -96,12 +96,12 @@ winPercent=მოგება
 losePercent=წაგება
 stoppedPercent=შეჩერებული
 winPercentForFinished=მოგების წილი
-groupByVersion=დაჯგუფება ვერსიით
+groupByVersion=დაჯგ. ვერსიით
 groupInOneResult=ერთად დაჯგუფება
-groupByOpponentName=დაჯგუფება სახელით
-groupByChannel=დაჯგუფება არხით
-groupByPointForWin=დაჯგუფება მოგების ქულით
-groupByLevel=დაჯგუფება დონით
+groupByOpponentName=დაჯგ. სახელით
+groupByChannel=დაჯგ. არხით
+groupByPointForWin=დაჯგ. მოგების ქულით
+groupByLevel=დაჯგ. დონით
 
 ########### Grouped opponent plays
 groupedOpponentPlays=დაჯგუფებული მოწინააღმდეგის სვლები
