change backspace with escape

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -23,7 +23,7 @@ show=Show
 geo=Geo
 eng=Eng
 shortcut_x_y=Select tile(left,right)
-shortcut_backspace=Rejected selected tile
+shortcut_esc=Rejected selected tile
 shortcut_arrow=Choose direction for tile
 shortcut_+=Add tile
 shortcut_Z=Undo
