--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -23,7 +23,7 @@ show=ნახვა
 geo=ქართ
 eng=ინგ
 shortcut_x_y=ქვის(left,right) არჩევა
-shortcut_backspace=არჩეული ქვის გაუქმება
+shortcut_esc=არჩეული ქვის გაუქმება
 shortcut_arrow=ჩამოსასვლელი ქვის მიმართულების არჩევა
 shortcut_+=ქვის დამატება
 shortcut_Z=უკან დაბრუნება
