added profit on grouped played game

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -104,6 +104,7 @@ groupByOpponentName=Group by opponent name
 groupByChannel=Group by channel
 groupByPointForWin=Group by point for win
 groupByLevel=Group by level
+profit=Profit
 
 ########### Grouped opponent plays
 groupedOpponentPlays=Grouped opponent plays
