added finished column on grouped game pane

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -105,6 +105,7 @@ groupByChannel=Group by channel
 groupByPointForWin=Group by point for win
 groupByLevel=Group by level
 profit=Profit
+finished=Finished
 
 ########### Grouped opponent plays
 groupedOpponentPlays=Grouped opponent plays
