--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -103,6 +103,7 @@ groupByChannel=დაჯგ. არხით
 groupByPointForWin=დაჯგ. მოგების ქულით
 groupByLevel=დაჯგ. დონით
 profit=სარგებელი
+finished=დასრულებული
 
 ########### Grouped opponent plays
 groupedOpponentPlays=დაჯგუფებული მოწინააღმდეგის სვლები
