--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -102,6 +102,7 @@ groupByOpponentName=დაჯგ. სახელით
 groupByChannel=დაჯგ. არხით
 groupByPointForWin=დაჯგ. მოგების ქულით
 groupByLevel=დაჯგ. დონით
+groupByDate=დაჯგ. თარიღით
 profit=სარგებელი
 finished=დასრულებული
 
