added start date for played game

--- a/console/ui/src/main/resources/messages_en.properties
+++ b/console/ui/src/main/resources/messages_en.properties
@@ -74,7 +74,7 @@ he=he
 playedGame=Played game
 version=Version
 result=Result
-endDate=Date
+endDate=End date
 myPoint=My point
 opponentPoint=Opponent point
 pointForWin=Point for win
@@ -84,6 +84,7 @@ OPPONENT_WIN=Win opponent
 STOPPED=Stopped
 RUNS=Not finished
 date=Date
+startDate=Start Date
 
 ########### Save game
 saveGame=Save game
