--- a/console/ui/src/main/resources/messages_ka.properties
+++ b/console/ui/src/main/resources/messages_ka.properties
@@ -72,7 +72,7 @@ he=ის
 playedGame=ნათამაშები თამაში
 version=ვერსია
 result=შედეგი
-endDate=თარიღი
+endDate=დასრ. თარიღი
 myPoint=ჩემი ქულა
 opponentPoint=მისი ქულა
 pointForWin=მოგების ქულა
@@ -82,6 +82,7 @@ OPPONENT_WIN=წავაგე
 STOPPED=შეჩერდა
 RUNS=მიმდინარეობს
 date=თარიღი
+startDate=დაწყ. თარიღი
 
 ########### Save game
 saveGame=თამაშის შენახვა
